bundled_metadata/force-app/main/default/objects/Assortment/fields/AssortmentExtID__c.field-meta.xml
<CustomField>
    <fullName>AssortmentExtID__c</fullName>
    <externalId>true</externalId>
    <label>Assortment Product Code</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>