bundled_metadata/force-app/main/default/objects/Assortment/fields/AssortmentType__c.field-meta.xml
<CustomField>
    <fullName>AssortmentType__c</fullName>
    <label>Assortment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product List</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Car Sales</fullName>
            </value>
            <value>
                <fullName>MSL Foods</fullName>
            </value>
            <value>
                <fullName>MSL Bevs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>